--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
- <style>
-#header {
+#headerdd {
     background-color:black;
     color:white;
     text-align:center;
@@ -25,4 +24,4 @@
     text-align:center;
     padding:5px;
 }
-</style> 
+
