--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 #headerdd {
-    background-color:black;
+    background-color:#C5EFFF;
     color:white;
     text-align:center;
     padding:5px;
@@ -18,7 +18,7 @@
     padding:10px;
 }
 #footer {
-    background-color:black;
+    background-color:#C5EFFF;
     color:white;
     clear:both;
     text-align:center;
