--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,27 @@
 #headerdd {
-    background-color:#C5EFFF;
+    background-color:#4682B4;
     color:white;
     text-align:center;
     padding:5px;
 }
 #nav {
     line-height:30px;
-    background-color:#eeeeee;
+    background-color: #282D33;
     height:300px;
     width:100px;
     float:left;
     padding:5px;
+    color:white;
 }
 #section {
-    width:350px;
+    background-color:#C5EFFF;
+    width:1150px;
+    height:300px;
     float:left;
-    padding:10px;
+    padding:5px;
 }
 #footer {
-    background-color:#C5EFFF;
+    background-color:#4682B4;
     color:white;
     clear:both;
     text-align:center;
