--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 }
 #nav {
     line-height:30px;
-    background-color: #282D33;
+    background-color: #3E4650;
     height:300px;
     width:100px;
     float:left;
