--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,8 @@
 #nav {
     line-height:30px;
     background-color: #3E4650;
-    height:300px;
-    /*width:100px;
+    /*height:300px;
+    width:100px;
     float:left;
     padding:5px;*/
     color:white;
@@ -16,7 +16,7 @@
 #section {
     background-color:#C5EFFF;
     /*width:1150px;*/
-    height:300px;
+    /*height:300px;*/
    /* float:left;
     padding:5px;*/
 }
