--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@
     color:white;
     text-align:center;
     padding:5px;
+    height: 80px;
+}
+#content {
+    height: 600px;
 }
 #nav {
     line-height:30px;
@@ -11,13 +15,17 @@
     width:100px;
     float:left;
     padding:5px;*/
+    max-height: 500px;
     color:white;
+    height: 100%;
 }
 #section {
     background-color:#C5EFFF;
     /*width:1150px;*/
-    /*height:300px;*/
-   /* float:left;
+    height: 100%;
+    max-height: 500px;
+    overflow:auto;
+    /*float:left;
     padding:5px;*/
 }
 #footer {
@@ -26,5 +34,6 @@
     clear:both;
     text-align:center;
     padding:5px;
+    height: 30px;
 }
 
