-ajout des modals -améliorations visuels

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-#header {
+/*#header {
     background-color:#59afd1;
     color:white;
     text-align:center;
@@ -10,10 +10,10 @@
 #nav {
     line-height:30px;
     background-color: #3E4650;
-    /*height:300px;
+    height:300px;
     width:100px;
     float:left;
-    padding:5px;*/
+    padding:5px;
     max-height: 500px;
     color:white;
     height: 100%;
@@ -21,13 +21,13 @@
 #navbar{
 }
 #section {
-    /*background-color:#C5EFFF;
+    background-color:#C5EFFF;
     width:1150px;
     height: 100%;
     max-height: 500px;
     overflow:auto;
     float:left;
-    padding:5px;*/
+    padding:5px;
     font-family: Arial,Helvetica,sans-serif;
 
 }
@@ -41,4 +41,13 @@
     font-family: Arial,Helvetica,sans-serif;
     font-weight: bold;
 }
-
+*/
+#table_id_filter{
+    float: left;
+}
+#table_id_length{
+    float: right;
+}
+#table_id_wrapper{
+    margin-top: 10px;
+}
