--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@
     font-family: Arial,Helvetica,sans-serif;
     font-weight: bold;
 }
-*/
+
 #table_id_filter{
     float: left;
 }
@@ -50,4 +50,4 @@
 }
 #table_id_wrapper{
     margin-top: 10px;
-}
+}*/
